--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                             <br />
                             <p style="line-height: 1.25em;">
                                 <span style="font-size: 16px;">
-                                    I received my B.Sc. from the School of EECS and my B.Soc.Sc. in Economics from the National School of Development, Peking University in 2020.
+                                    I received my B.Sc. in Computer Science from the School of EECS and my B.Soc.Sc. in Economics from the National School of Development, Peking University in 2020.
                                 </span>
                             </p>
                             <br />
@@ -135,7 +135,7 @@
 
             <div class="col_lg_10">
                 <sectionheading>News</sectionheading>
-                <br />
+                <br /><br />
                 <p style="line-height: 2em;">
                     <ul>
                         <li><strong>[Nov. 2023]</strong> We released the largest corpus of minority languages in China to date! [<a href="https://arxiv.org/pdf/2311.08348.pdf" target="_blank">Paper</a>]</li>
@@ -151,9 +151,9 @@
 
             <div class="col_lg_10">
                 <sectionheading>Internship Experience</sectionheading>
-                <br />
+                <br /><br />
                 <p style="line-height: 1.25em;">
-                    <heading>Kuaishou&nbsp;(Beijing Dajia Internet Information Technology Co., Ltd.)</heading>
+                    <heading>@Kuaishou&nbsp;(Beijing Dajia Internet Information Technology Co., Ltd.)</heading>
                     <br />
                     <b>Research Intern</b>
                     <br />
