--- a/index.html
+++ b/index.html
@@ -162,6 +162,35 @@
                 <br />
             </div>
 
+            <div class="clearfix"></div>
+            <div class="col_lg_10 top"></div>
+
+            <div class="col_lg_10">
+                <sectionheading>Service</sectionheading>
+                <br /><br />
+                <p style="line-height: 2em;">
+                    <ul>
+                        <li><strong>NLPCC Reviewer:</strong> 2021-2023</li>
+                        <li><strong>COLING Reviewer:</strong> 2023</li>
+                        <li><strong>EMNLP Reviewer:</strong> 2023</li>
+                    </ul>
+                </p>
+                <br />
+            </div>
+
+            <div class="col_lg_10">
+                <sectionheading>Awards &amp; Honors</sectionheading>
+                <br /><br />
+                <p style="line-height: 1.25em;">
+                    <heading>Silver Medal for Eight (Rowing)</heading>
+                    <br />
+                    <b>The First Deep Dive City League</b>
+                    <br />
+                    <i>April 21th, 2019. @Daoxiang Lake, Beijing. Served as rower.</i>
+                </p>
+                <br />
+            </div>
+
             <div class="col_lg_10 top"></div>
             <!--<div class="clearfix"></div>-->
         </div>
