--- a/index.html
+++ b/index.html
@@ -182,11 +182,27 @@
                 <sectionheading>Awards &amp; Honors</sectionheading>
                 <br /><br />
                 <p style="line-height: 1.25em;">
-                    <heading>Silver Medal for Eight (Rowing)</heading>
+                    <heading><font color="#808080">Silver Medal</font> for Eight (Rowing)</heading>
                     <br />
                     <b>The First Deep Dive City League</b>
                     <br />
                     <i>April 21th, 2019. @Daoxiang Lake, Beijing. Served as rower.</i>
+                </p>
+                <br /><br />
+                <p style="line-height: 1.25em;">
+                    <heading><font color="#808080">Silver Medal</font> for Mixed Four Curling</heading>
+                    <br />
+                    <b>The Fourth Curling Competition of Universities and Colleges in Capital</b>
+                    <br />
+                    <i>June 5th-6th, 2021. @Ditan Sports Center, Beijing. Served as Third in Team WU (Team of Peking University).</i>
+                </p>
+                <br /><br />
+                <p style="line-height: 1.25em;">
+                    <heading><font color="#FFD700">Gold Medal</font> for Men Curling</heading>
+                    <br />
+                    <b>The Second Winter Games of Beijing</b>
+                    <br />
+                    <i>March 26th-27th, 2023. @Daxing Indoor Stadium, Beijing. Served as Third (knockout round) or Lead (final) in Team YUAN (Team of Haidian District).</i>
                 </p>
                 <br />
             </div>
