--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                 <sectionheading>Awards &amp; Honors</sectionheading>
                 <br /><br />
                 <p style="line-height: 1.25em;">
-                    <heading><font color="#808080">Silver Medal</font> for Eight (Rowing)</heading>
+                    <heading><font color="#808080">Silver Medal</font> of Eight (Rowing)</heading>
                     <br />
                     <b>The First Deep Dive City League</b>
                     <br />
@@ -193,7 +193,7 @@
                 </p>
                 <br />
                 <p style="line-height: 1.25em;">
-                    <heading><font color="#808080">Silver Medal</font> for Mixed Four Curling</heading>
+                    <heading><font color="#808080">Silver Medal</font> of Mixed Four Curling</heading>
                     <br />
                     <b>The Fourth Curling Competition of Universities and Colleges in Capital</b>
                     <br />
@@ -201,7 +201,7 @@
                 </p>
                 <br />
                 <p style="line-height: 1.25em;">
-                    <heading><font color="#FFD700">Gold Medal</font> for Men Curling</heading>
+                    <heading><font color="#FFD700">Gold Medal</font> of Men Curling</heading>
                     <br />
                     <b>The Second Winter Games of Beijing</b>
                     <br />
