--- a/index.html
+++ b/index.html
@@ -212,6 +212,21 @@
                 <br />
             </div>
 
+            <div class="clearfix"></div>
+            <div class="col_lg_10 top"></div>
+
+            <div class="col_lg_10">
+                <sectionheading>Contact</sectionheading>
+                <br /><br />
+                <p style="line-height: 1.25em;">
+                    Wangxuan Institute of Computer Technology, Peking University<br />
+                    No. 128 Zhongguancun North Street<br />
+                    Haidian District, Beijing, 100871<br />
+                    thomastao [at] pku.edu.cn
+                </p>
+                <br />
+            </div>
+
             <div class="col_lg_10 top"></div>
             <!--<div class="clearfix"></div>-->
         </div>
