--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
         <script src="./js/html5.js" type="text/javascript"></script>
         <script src="./js/response.min.js"></script>
     <![endif]-->
-    <script type="text/javascript">
+
+    <!--<script type="text/javascript">
     var browser = {
             versions: function () {
                 var u = navigator.userAgent, app = navigator.appVersion;
@@ -46,7 +47,7 @@
                 url = url + "index_mobile.htm";
             }
             document.location = url;
-        }</script>
+        }</script>-->
 </head>
 
 <body>
@@ -66,7 +67,7 @@
                 </section>
                 <section class="mainWrap mainWrap02 noline">
                     <ul class="subNavRight" style="list-style-type:none;">
-                        <li><a href="./english/index.htm">English</a></li>
+                        <li><a href="./zh/index.htm">English</a></li>
                     </ul>
                 </section>
                 <!-- search -->
