--- a/zh/index.html
+++ b/zh/index.html
@@ -7,12 +7,12 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta name="format-detection" content="telephone=no" />
     <title>Mingxu TAO</title>
-    <link href="./css/icon.css" rel="stylesheet" type="text/css">
-    <link href="./css/base.css" rel="stylesheet" type="text/css">
-    <link href="./css/index.css" rel="stylesheet" type="text/css">
-    <link href="./css/En/inner.css" rel="stylesheet" type="text/css">
+    <link href="../css/icon.css" rel="stylesheet" type="text/css">
+    <link href="../css/base.css" rel="stylesheet" type="text/css">
+    <link href="../css/index.css" rel="stylesheet" type="text/css">
+    <link href="../css/En/inner.css" rel="stylesheet" type="text/css">
     <!--<link href="./css/font-awesome.min.css" rel="stylesheet" type="text/css">-->
-    <link rel="stylesheet" type="text/css" href="./css/stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="../css/stylesheet.css">
 
     <!--[if lt IE 9]>
         <script src="./js/html5.js" type="text/javascript"></script>
@@ -66,7 +66,7 @@
                 </section>
                 <section class="mainWrap mainWrap02 noline">
                     <ul class="subNavRight" style="list-style-type:none;">
-                        <li><a href="./english/index.htm">English</a></li>
+                        <li><a href="../index.html">English</a></li>
                     </ul>
                 </section>
                 <!-- search -->
@@ -100,7 +100,7 @@
 
             <div class="col_lg_3 col_md_3">
                 <p style="text-align: center;">
-                    <img class="center" src="./tmx.png" style="width: 200px; height: 200px;" />
+                    <img class="center" src="../tmx.png" style="width: 200px; height: 200px;" />
                 </p>
             </div>
             <div class="col_lg_7 col_md_7">
