--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 </section>
                 <section class="mainWrap mainWrap02 noline">
                     <ul class="subNavRight" style="list-style-type:none;">
-                        <li><a href="./zh/index.htm">English</a></li>
+                        <li><a href="./zh/index.html">中文</a></li>
                     </ul>
                 </section>
                 <!-- search -->
