--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
 
                             <p style="line-height: 1.25em;">
                                 <span style="font-size: 16px;">
-                                    I am now a fourth-year PhD candidate at Center for Data Science &amp; Wangxuan Institute of Computer Technology&nbsp;(WICT) of Peking University, supervised by Prof. Yansong FENG and Prof. Dongyan ZHAO.
-                                </span>
+                                    I am now a fourth-year PhD candidate at Center for Data Science &amp; Wangxuan Institute of Computer Technology&nbsp;(WICT) of Peking University, supervised by Prof. <a href="https://yansongfeng.github.io/" target="_blank">Yansong FENG</a> and Prof. <a href="https://www.wict.pku.edu.cn/zhaodongyan/en/" target="_blank">Dongyan ZHAO</a>.
+</span>
                             </p>
                             <br />
                             <p style="line-height: 1.25em;">
@@ -139,10 +139,24 @@
                 <br /><br />
                 <p style="line-height: 2em;">
                     <ul>
-                        <li><strong>[Nov. 2023]</strong> We released the largest corpus of minority languages in China to date! [<a href="https://arxiv.org/pdf/2311.08348.pdf" target="_blank">Paper</a>]</li>
+                        <li><strong>[Nov. 2023]</strong> We released the largest corpus of minority languages in China to date! [<a href="https://arxiv.org/abs/2311.08348" target="_blank">Paper</a>]</li>
                         <li><strong>[Aug. 2023]</strong> Our paper on better finetuning strategy of absolute position embedding got accepted by NLPCC 2023! [<a href="https://arxiv.org/abs/2305.04859" target="_blank">Paper</a>]</li>
                         <li><strong>[May 2023]</strong> We released the first open-source Large Language Model in the legal domain! [<a href="https://arxiv.org/abs/2305.15062" target="_blank">Paper</a>]</li>
                         <li><strong>[Jan. 2023]</strong> Our paper on interpretability of lifelong learning in pre-trained language models got accepted by ICLR 2023! [<a href="https://openreview.net/forum?id=UazgYBMS9-W" target="_blank">Paper</a>]</li>
+                    </ul>
+                </p>
+                <br />
+            </div>
+
+            <div class="clearfix"></div>
+            <div class="col_lg_10 top"></div>
+
+            <div class="col_lg_10">
+                <sectionheading>Invited Talks</sectionheading>
+                <br /><br />
+                <p style="line-height: 2em;">
+                    <ul>
+                        <li><strong>[Dec. 2023]</strong> Long Document Meets LLMs. @Sichuan University. with <a href="https://andrewzhe.github.io/" target="_blank">Quzhe Huang</a> and <a href="https://luciusssss.github.io/" target="_blank">Chen Zhang</a>. [<a href="/files/Long_Doc_Meets_LLMs.pdf" target="_blank">Slides</a>]</li>
                     </ul>
                 </p>
                 <br />
