--- a/zh/index.html
+++ b/zh/index.html
@@ -110,8 +110,8 @@
 
                             <p style="line-height: 1.25em;">
                                 <span style="font-size: 16px;">
-                                    我是北京大学前沿交叉学科研究院和王选计算机研究所的四年级直博生。我的导师是赵东岩研究员和冯岩松副教授。
-                                </span>
+                                    我是北京大学前沿交叉学科研究院和王选计算机研究所的四年级直博生。我的导师是<a href="https://www.wict.pku.edu.cn/zhaodongyan/en/" target="_blank">赵东岩</a>研究员和<a href="https://yansongfeng.github.io/" target="_blank">冯岩松</a>副教授。
+</span>
                             </p>
                             <br />
                             <p style="line-height: 1.25em;">
@@ -142,6 +142,22 @@
                         <li><strong>[Aug. 2023]</strong> 我们有关于绝对位置编码模型的改进方案的论文已被NLPCC 2023录用！[<a href="https://arxiv.org/abs/2305.04859" target="_blank">Paper</a>]</li>
                         <li><strong>[May 2023]</strong> 我们开源了LLM社区首个专注于法律领域的大模型！ [<a href="https://arxiv.org/abs/2305.15062" target="_blank">Paper</a>]</li>
                         <li><strong>[Jan. 2023]</strong> 我们有关于预训练模型持续学习过程中的可解释性的研究已经被ICLR 2023录用！ [<a href="https://openreview.net/forum?id=UazgYBMS9-W" target="_blank">Paper</a>]</li>
+                    </ul>
+                </p>
+                <br />
+            </div>
+
+            <div class="clearfix"></div>
+            <div class="col_lg_10 top"></div>
+
+            <div class="col_lg_10">
+                <sectionheading>受邀报告</sectionheading>
+                <br /><br />
+                <p style="line-height: 2em;">
+                    <ul>
+                        <li>
+                            <strong>[Dec. 2023]</strong> 当大模型遇上长文本：可行路线探索与长上下文模型介绍. @四川大学. 与<a href="https://andrewzhe.github.io/" target="_blank">黄曲哲</a>和<a href="https://luciusssss.github.io/" target="_blank">张晨</a>. [<a href="/files/Long_Doc_Meets_LLMs.pdf" target="_blank">Slides</a>]
+                        </li>
                     </ul>
                 </p>
                 <br />
