--- a/zh/index.html
+++ b/zh/index.html
@@ -138,10 +138,12 @@
                 <br /><br />
                 <p style="line-height: 2em;">
                     <ul>
+                        <li><strong>[Feb. 2024]</strong> 我们关于多模态LLM潜在编码缺陷的可解释性论文已被LREC-COLING 2024录用</li>
+                        <li><strong>[Feb. 2024]</strong> 我们关于汉语-壮语翻译的论文已被TinyPaper@ICLR 2024录用</li>
                         <li><strong>[Nov. 2023]</strong> 我们开源了迄今为止最大的中国少数民族语言语料库！ [<a href="https://arxiv.org/pdf/2311.08348.pdf" target="_blank">Paper</a>]</li>
-                        <li><strong>[Aug. 2023]</strong> 我们有关于绝对位置编码模型的改进方案的论文已被NLPCC 2023录用！[<a href="https://arxiv.org/abs/2305.04859" target="_blank">Paper</a>]</li>
+                        <li><strong>[Aug. 2023]</strong> 我们对于绝对位置编码模型的改进方案的论文已被NLPCC 2023录用！[<a href="https://arxiv.org/abs/2305.04859" target="_blank">Paper</a>]</li>
                         <li><strong>[May 2023]</strong> 我们开源了LLM社区首个专注于法律领域的大模型！ [<a href="https://arxiv.org/abs/2305.15062" target="_blank">Paper</a>]</li>
-                        <li><strong>[Jan. 2023]</strong> 我们有关于预训练模型持续学习过程中的可解释性的研究已经被ICLR 2023录用！ [<a href="https://openreview.net/forum?id=UazgYBMS9-W" target="_blank">Paper</a>]</li>
+                        <li><strong>[Jan. 2023]</strong> 我们关于预训练模型持续学习过程中的可解释性的研究已经被ICLR 2023录用！ [<a href="https://openreview.net/forum?id=UazgYBMS9-W" target="_blank">Paper</a>]</li>
                     </ul>
                 </p>
                 <br />
