--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
                 <section class="mainWrap mainWrap02 noline">
                     <ul class="subNavRight" style="list-style-type:none;">
                         <li><a href="./zh/index.html">中文</a></li>
+                        <li><a href="./publications.html">Publications</a></li>
                     </ul>
                 </section>
                 <!-- search -->
